--- a/bible-app/package.json
+++ b/bible-app/package.json
@@ -23,6 +23,8 @@
     "react-icons": "^4.9.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
-    "url-loader": "^4.1.1"
+    "url-loader": "^4.1.1",
+    "build":"tsc",
+    "start": "node dist/server.js"
   }
 }
