--- a/bible-app/package.json
+++ b/bible-app/package.json
@@ -24,7 +24,6 @@
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "url-loader": "^4.1.1",
-    "build":"tsc",
-    "start": "node dist/server.js"
+    "vercel": "^30.2.3"
   }
 }
