--- a/bible-app/package.json
+++ b/bible-app/package.json
@@ -22,7 +22,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "tailwindcss": "3.3.2",
-    "url-loader": "^4.1.1",
-    "vercel": "^30.2.3"
+    "typescript": "5.1.3",
+    "url-loader": "^4.1.1"
+   
   }
 }
