--- a/bible-app/tsconfig.json
+++ b/bible-app/tsconfig.json
@@ -18,6 +18,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "webpack.config.js", "components/Audio.js", "components/body.js", "pages/Listen/[...Listen].js", "next.config.js", "components/Bible.js", "components/Footer.js", "components/musicAudio.js", "components/nav.js", "components/newNav.js", "models/audio.js", "models/music.js", "pages/api/getAudio.js", "pages/api/getMusic.js", "pages/api/postAudio.js", "pages/api/postMusic.js", "pages/Home/[...Home].js", "pages/Music/[...Music].js", "pages/_app.js", "pages/_document.js", "pages/index.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "next.config.js"],
   "exclude": ["node_modules"]
 }
