--- a/bible-app/package.json
+++ b/bible-app/package.json
@@ -13,6 +13,7 @@
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "mongoose": "^7.3.1",
     "next": "^13.4.7",
     "postcss": "8.4.24",
