--- a/bible-app/.env
+++ b/bible-app/.env
@@ -1,2 +1,2 @@
 
-MONGODB_URI = 'mongodb+srv://rapperthedabber:jesusIsKing@cluster0.tapkvnb.mongodb.net/'
+MONGODB_URI = 'mongodb+srv://rapperthedabber:jesusIsKing@cluster0.tapkvnb.mongodb.net/?retryWrites=true&w=majority'
